[gd_scene load_steps=25 format=3 uid="uid://bwgnq6qm0dskt"]

[ext_resource type="Script" uid="uid://kjhguage8fg1" path="res://player.gd" id="1_ryrav"]
[ext_resource type="Texture2D" uid="uid://dvya1hd5dgetv" path="res://sprites/Cyan/fall_0.png" id="2_e8heu"]
[ext_resource type="Texture2D" uid="uid://dbykrsykoow3y" path="res://sprites/Cyan/fall_1.png" id="3_rvswv"]
[ext_resource type="Texture2D" uid="uid://dr76ref4pvkby" path="res://sprites/Cyan/idle_0.png" id="4_boyg6"]
[ext_resource type="Texture2D" uid="uid://ck2sc3dj7a8en" path="res://sprites/Cyan/idle_1.png" id="5_e36ub"]
[ext_resource type="Texture2D" uid="uid://b3txps33pigus" path="res://sprites/Cyan/walk_0.png" id="5_hve3p"]
[ext_resource type="Texture2D" uid="uid://c5aq62qa8kc33" path="res://sprites/Cyan/idle_2.png" id="6_hb5m1"]
[ext_resource type="Texture2D" uid="uid://dl8f8vi8wjjvr" path="res://sprites/Cyan/walk_1.png" id="6_mfdv2"]
[ext_resource type="Texture2D" uid="uid://g4udv7lrp23u" path="res://20230722_170055.jpg" id="7_eow3j"]
[ext_resource type="Texture2D" uid="uid://cugpsdo0loerg" path="res://sprites/Cyan/walk_2.png" id="7_iotsf"]
[ext_resource type="Texture2D" uid="uid://b3gnfncx1bjm7" path="res://sprites/Cyan/jump_0.png" id="7_x5p1p"]
[ext_resource type="Script" uid="uid://cve6y0gwev13r" path="res://UI.gd" id="8_j5wjh"]
[ext_resource type="Texture2D" uid="uid://bw7cm0m7o5ey5" path="res://sprites/Cyan/walk_3.png" id="8_lc2xo"]
[ext_resource type="Texture2D" uid="uid://blyx82jpavsty" path="res://sprites/Cyan/jump_1.png" id="8_qhcbd"]
[ext_resource type="Script" uid="uid://d2o4r3q8o2ixy" path="res://dialogue.gd" id="11_iotsf"]
[ext_resource type="Texture2D" uid="uid://bmaeavcf8h8ah" path="res://sprites/Cyan/walk_4.png" id="13_f1jbl"]
[ext_resource type="Texture2D" uid="uid://d0yrk6clvk6f5" path="res://sprites/Cyan/walk_5.png" id="14_vaj68"]

[sub_resource type="SpriteFrames" id="SpriteFrames_iotsf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_e8heu")
}, {
"duration": 1.0,
"texture": ExtResource("3_rvswv")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_boyg6")
}, {
"duration": 1.0,
"texture": ExtResource("5_e36ub")
}, {
"duration": 1.0,
"texture": ExtResource("4_boyg6")
}, {
"duration": 1.0,
"texture": ExtResource("6_hb5m1")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_x5p1p")
}, {
"duration": 1.0,
"texture": ExtResource("8_qhcbd")
}],
"loop": true,
"name": &"rise",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_hve3p")
}, {
"duration": 1.0,
"texture": ExtResource("6_mfdv2")
}, {
"duration": 1.0,
"texture": ExtResource("7_iotsf")
}, {
"duration": 1.0,
"texture": ExtResource("8_lc2xo")
}, {
"duration": 1.0,
"texture": ExtResource("13_f1jbl")
}, {
"duration": 1.0,
"texture": ExtResource("14_vaj68")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lc2xo"]
radius = 5.5
height = 24.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j5wjh"]
size = Vector2(1078, 1022)

[sub_resource type="LabelSettings" id="LabelSettings_eow3j"]
font_size = 10
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_iotsf"]
line_spacing = -2.0
font_size = 6

[sub_resource type="GDScript" id="GDScript_mfdv2"]
script/source = "extends Area2D
"

[sub_resource type="CircleShape2D" id="CircleShape2D_hve3p"]
radius = 19.0263

[node name="Node2D" type="Node2D"]

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(1060, 133)
script = ExtResource("1_ryrav")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Player"]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_iotsf")
animation = &"idle"
frame_progress = 0.721512

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(0, 3)
shape = SubResource("CapsuleShape2D_lc2xo")
one_way_collision_margin = 0.0

[node name="Camera2D" type="Camera2D" parent="Player"]
position_smoothing_enabled = true

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(1060, 133)

[node name="20230722170055" type="Sprite2D" parent="StaticBody2D"]
position = Vector2(51, 614)
texture = ExtResource("7_eow3j")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(51, 614)
shape = SubResource("RectangleShape2D_j5wjh")

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("8_j5wjh")

[node name="Debug" type="Label" parent="UI"]
visible = false
offset_right = 320.0
offset_bottom = 180.0
text = " X vel : <X>
 Y vel : <y>"
label_settings = SubResource("LabelSettings_eow3j")
autowrap_mode = 3

[node name="DialogueBox" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("11_iotsf")

[node name="Box1" type="Polygon2D" parent="UI/DialogueBox"]
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(64, 125, 256, 125, 256, 177, 64, 177)

[node name="Box2" type="Polygon2D" parent="UI/DialogueBox/Box1"]
polygon = PackedVector2Array(65, 126, 255, 126, 255, 176, 65, 176)

[node name="Box3" type="Polygon2D" parent="UI/DialogueBox/Box1/Box2"]
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(66, 127, 254, 127, 254, 175, 66, 175)

[node name="Text" type="Label" parent="UI/DialogueBox/Box1/Box2/Box3"]
offset_left = 68.0
offset_top = 127.0
offset_right = 252.0
offset_bottom = 173.0
text = "(You should go put on your hat"
label_settings = SubResource("LabelSettings_iotsf")

[node name="TestDialogue" type="Area2D" parent="."]
position = Vector2(1325, 232)
script = SubResource("GDScript_mfdv2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="TestDialogue"]
position = Vector2(0, -16)
shape = SubResource("CircleShape2D_hve3p")

[connection signal="Start_Dialogue" from="Player" to="UI/DialogueBox" method="_on_player_start_dialogue"]
[connection signal="VelX" from="Player" to="UI" method="_on_player_vel_x"]
[connection signal="VelY" from="Player" to="UI" method="_on_player_vel_y"]
[connection signal="dialogue_ended" from="UI/DialogueBox" to="Player" method="_on_dialogue_box_dialogue_ended"]
[connection signal="body_entered" from="TestDialogue" to="Player" method="_on_test_dialogue_body_entered"]
[connection signal="body_exited" from="TestDialogue" to="Player" method="_on_test_dialogue_body_exited"]
